[package]
name = "extractor"
version = "1.0.3"
edition = "2024"

[dependencies]
binrw = "0.15.0"
clap = { version = "4.5.42", features = ["derive"] }
rayon = "1.10"
mimalloc = "0.1.47"
libdeflater = "1.24.0"
crossbeam = "0.8.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
